# inorbit-connector-python

./: .bumpversion.cfg  .gitattributes  .gitignore  .pypirc  .reuseignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REUSE.toml  pyproject.toml  qodana.sarif.json  qodana.yaml  requirements-colorlog.txt  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: build-and-publish.yaml  docs.yaml  lint-and-test.yaml
docs/: Makefile  conf.py  configuration.md  getting-started.md  index.md  publishing.md
docs/contents/: configuration.md  docs.json  getting-started.md  index.md  publishing.md
docs/contents/specification/: annotation-sync.md  commands.md  config-api.md  connector.md  index.md  logging.md  models.md  utils.md
docs/contents/usage/: annotation-sync.md  commands-handling.md  fleet.md  index.md  metrics.md  single-robot.md
docs/deployment/: README.md  otel-collector-compose.yaml  otel-collector-config.yaml
docs/mintlify/: Makefile  build.py  navigation.json
docs/specification/: commands.md  connector.md  index.md  logging.md  models.md  utils.md
docs/sphinx/: Makefile  conf.py  configuration.md  fix_links.py  getting-started.md  index.md  publishing.md
docs/sphinx/specification/: commands.md  (+7 more)
docs/usage/: commands-handling.md  fleet.md  index.md  single-robot.md
examples/: .gitignore  README.md  example.env  example.fleet.yaml  example.yaml  logging.example.conf
examples/fleet-connector/: connector.py  datatypes.py  fleet_client.py  main.py  metrics.py  waypoint_sync.py
examples/metrics/: README.md  otel-collector-compose.yaml  otel-collector-config.yaml
examples/robot-connector/: connector.py  datatypes.py  main.py  metrics.py  robot.py
examples/simple-connector/: connector.py
examples/simple-fleet-connector/: connector.py
inorbit_connector/: __init__.py  commands.py  config.py  connector.py  fleet.py  managed_connector.py  models.py  utils.py
inorbit_connector/annotation_sync/: __init__.py  config_client.py  interfaces.py  manager.py  models.py
inorbit_connector/inorbit/: __init__.py  config_api.py  models.py
inorbit_connector/logging/: __init__.py  formatters.py  logger.py  logging.default.conf
inorbit_connector/metrics/: __init__.py  http.py  server.py
inorbit_connector/waypoint_sync/: __init__.py  config_client.py  interfaces.py  manager.py  models.py
scripts/: README.md  example.py  example.yaml
tests/: conftest.py  test_annotation_sync_models.py  test_commands.py  test_connector.py  test_connector_metrics.py  test_logging.py  test_metrics_http.py  test_metrics_info_gauges.py  test_metrics_instruments.py  test_metrics_prefixed_meter.py  test_metrics_server.py  test_metrics_setup.py  test_models.py  test_parse_custom_command_args.py  test_utils.py  test_waypoint_sync.py
tests/dir/: test_map.png.license
(+6 files in other folders)
